<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--All the items added without any grouping-->

    <item
        android:id="@+id/event"
        android:icon="@mipmap/ic_event"
        android:title="@string/event" />
    <item
        android:id="@+id/visit"
        android:icon="@mipmap/ic_visit"
        android:title="@string/visit" />
    <item
        android:id="@+id/map"
        android:icon="@mipmap/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/guide"
        android:icon="@mipmap/ic_guide"
        android:title="@string/guide" />
    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_business_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_business_black_24dp"
        android:title="@string/about" />

</menu>