<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/museum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_museum"
        android:paddingLeft="5dp"
        android:text="@string/museums" />

    <Button
        android:id="@+id/cinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_cinema"
        android:paddingLeft="5dp"
        android:text="@string/cinemas" />

    <Button
        android:id="@+id/theater"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_theater"
        android:paddingLeft="5dp"
        android:text="@string/theaters" />

    <Button
        android:id="@+id/club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_club"
        android:paddingLeft="5dp"
        android:text="@string/clubs" />
    <Button
        android:id="@+id/pharmacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_pharmacy"
        android:paddingLeft="5dp"
        android:text="@string/pharmacies" />
    <Button
        android:id="@+id/hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_hospital"
        android:paddingLeft="5dp"
        android:text="@string/hospital" />
    <Button
        android:id="@+id/emergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:drawableLeft="@mipmap/ic_phone"
        android:paddingLeft="5dp"
        android:text="@string/emergency" />
</LinearLayout>