<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="kz.kamadi.expo.activity.EmergencyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <Button
        android:id="@+id/police"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/police" />
    <Button
        android:id="@+id/medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/medicine" />
    <Button
        android:id="@+id/fire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/white_text"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/fire" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_gravity="right" />
</LinearLayout>
